--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ ubuntu-16.04 ]
-        php: [ '7.1', '7.2', '7.3' ]
-        wp: [ 'latest', '5.0' ]
+        operating-system: [ ubuntu-18.04 ]
+        php: [ '7.3' ]
+        wp: [ 'latest' ]
     services:
       mysql:
         image: mysql:5.7
@@ -32,9 +32,9 @@ jobs:
         with:
           php-version: ${{ matrix.php }}
 
-      - name: Validate composer.json and composer.lock
-        run: composer validate
-
+#      - name: Validate composer.json and composer.lock
+#        run: composer validate
+    
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
 
