--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -35,8 +35,8 @@ jobs:
 #      - name: Validate composer.json and composer.lock
 #        run: composer validate
     
-      - name: Install dependencies
-        run: composer install --prefer-dist --no-progress --no-suggest
+#      - name: Install dependencies
+#        run: composer install --prefer-dist --no-progress --no-suggest
 
       - name: Start MySQL
         run: sudo systemctl start mysql
