fix unit test settings

--- a/.github/workflows/wordpress.yml
+++ b/.github/workflows/wordpress.yml
@@ -32,11 +32,11 @@ jobs:
         with:
           php-version: ${{ matrix.php }}
 
-#      - name: Validate composer.json and composer.lock
-#        run: composer validate
+      - name: Validate composer.json and composer.lock
+        run: composer validate
     
-#      - name: Install dependencies
-#        run: composer install --prefer-dist --no-progress --no-suggest
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress --no-suggest
 
       - name: Start MySQL
         run: sudo systemctl start mysql
